# projects

./: heroku-deployment.rar  index.html  mongodb.rar  package-lock.json  package.json  practice 1.htm  practice 1.txt  reviews.html
RESTful-api/: ReadMe.txt  package-lock.json  package.json  web.html
Rust-codes/module_assignment7/: Cargo.toml
Rust-codes/module_assignment7/src/: lib.rs  main.rs  uni.rs
Weatherbot/: ReadMe.txt  index.js  main.js  package-lock.json  package.json
azurebot/: Medic-bot.json  index.js  package-lock.json  package.json
azurecloud/: index.js  package-lock.json  package.json
docker_web_app/: ReadMe.txt  package-lock.json  package.json  server.js
electronics/: home-appliance.html
forms/: forms-1.html
heroku-deployment/: ReadMe.txt  index.js  package-lock.json  package.json  web.html
html-practice/: practice 1.htm
jspractice/: practice.js
mongodb/: ReadMe.txt  index.js  package-lock.json  package.json
node-js/: ReadMe.txt  b3q4node.js  package-lock.json  package.json
nodejs-api/: index.js  package-lock.json  package.json  web.html
python codes/: foo.txt  numpy-practice.py  practice2.py  seriesAndDataframes.py
python-codes/: Dicesimulator.py  foo.txt  numpy-practice.py  plots.py  practice2.py  seriesAndDataframes.py  test.txt
voice-automation/: ReadMe.txt  index.js  package-lock.json  package.json
voiceCommands/: package-lock.json  package.json
voice_automation/: index.js  package-lock.json  package.json
webhook/: ReadMe.txt  index.html  index.js  package-lock.json  package.json
webposting/: web.html
(+105 files in other folders)
